start on develop

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
      <!--main-header START-->
     <header id="main-header">
-        <h1></h1>
+        <h1>JavaScript Clock</h1>
     </header>
     <!--main-header STOP-->
     <!--section DRUM START-->
