--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <!--section DRUM START-->
     <main id="clock-section" class="clock-section">
         <div class="container clock-container">
+            <div id="clock" class="clock">
+                <div class="clock-face">
+                    <div class="hand hour-hand"></div>
+                    <div class="hand min-hand"></div>
+                    <div class="hand sec-hand"></div>
+                </div>
+            </div>
         </div>    
     </main>
     <!--section GAME STOP-->
