--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>JavaScript Clock</h1>
     </header>
     <!--main-header STOP-->
-    <!--section DRUM START-->
+    <!--section clock START-->
     <main id="clock-section" class="clock-section">
         <div class="container clock-container">
             <div id="clock" class="clock">
@@ -28,7 +28,7 @@
             </div>
         </div>    
     </main>
-    <!--section GAME STOP-->
+    <!--section clock STOP-->
     <!--FOOTER START-->
     <footer id="footer" class="footer-section">
         <div class="footer-container">
